--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+*{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+	border: none;
+	outline: none;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  height: 40px;
+  background-color: black;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.logo {
+  display: flex;
   color: white;
+  align-items: center;
+  padding: 10px;
+}
+a {
+  text-decoration: none;
+  color: white;
+  margin-right: 15px
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo img {
+  height: 50px;
+  width: 50px; 
+  border-radius: 50px;
+  border: 3px white solid;
+  margin-right: 10px;
 }
