--- a/app/src/App.css
+++ b/app/src/App.css
@@ -22,7 +22,8 @@ header {
 a {
   text-decoration: none;
   color: white;
-  margin-right: 15px
+  margin-right: 15px;
+  font-family:sans-serif;
 }
 
 .logo img {
@@ -31,4 +32,11 @@ a {
   border-radius: 50px;
   border: 3px white solid;
   margin-right: 10px;
+}
+h1 {
+
+  margin-top: 80px;
+}
+h2 {
+  font-family:sans-serif;
 }
